Contrast issues

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -18,6 +18,7 @@ body {
     --accent1: #aedbf0;
     --accent2: #579dd7;
     --accent3: #ffffff;
+    --backdrop: rgba(0, 0, 0, 0.15);
 }
 
 [data-theme-type="dark"] {
@@ -25,6 +26,7 @@ body {
     --accent1: #579dd7;
     --accent2: #aedbf0;
     --accent3: #ffffff;
+    --backdrop: rgba(255, 255, 255, 0.15);
 }
 
 body {
