--- a/frontend/src/components/Gallery/PreviewWindow/PreviewWindow.module.css
+++ b/frontend/src/components/Gallery/PreviewWindow/PreviewWindow.module.css
@@ -6,7 +6,7 @@
     position: fixed;
     inset: 0;
     /* background: var(--crust); */
-    background-color: var(--selected-overlay);
+    background-color: var(--backdrop);
     backdrop-filter: blur(5px);
     display: flex;
     justify-content: center;
